スケジュールタスクで、Coroutine と AWS サービスを使うサンプルを追加